Build lang-dot in a step

--- a/.github/workflows/website-deploy.yml
+++ b/.github/workflows/website-deploy.yml
@@ -13,12 +13,7 @@ concurrency:
   cancel-in-progress: true
 
 jobs:
-  lang-dot-build:
-    uses: ./.github/workflows/lang-dot-build.yml
-
   build:
-    needs:
-      - lang-dot-build
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
@@ -36,7 +31,11 @@ jobs:
         id: pages
         uses: actions/configure-pages@v3
 
-      - name: Build with Parcel
+      - name: Build lang-dot
+        run: yarn build
+        working-directory: packages/lang-dot
+
+      - name: Build website
         run: yarn build --public-url "${{ steps.pages.outputs.base_path }}/"
         timeout-minutes: 1
         working-directory: packages/website
