--- a/packages/viz/package.json
+++ b/packages/viz/package.json
@@ -8,7 +8,8 @@
   "version": "3.1.0-dev",
   "repository": {
     "type": "git",
-    "url": "https://github.com/mdaines/viz-js.git"
+    "url": "https://github.com/mdaines/viz-js.git",
+    "directory": "packages/viz"
   },
   "license": "MIT",
   "types": "types/index.d.ts",
