--- a/.github/workflows/lang-dot-publish.yml
+++ b/.github/workflows/lang-dot-publish.yml
@@ -1,12 +1,12 @@
-name: Publish viz
+name: Publish lang-dot
 
 on:
   push:
-    tags: ["viz-release-*"]
+    tags: ["lang-dot-release-*"]
 
 jobs:
   build:
-    uses: ./.github/workflows/viz-build.yml
+    uses: ./.github/workflows/lang-dot-build.yml
 
   release:
     needs: build
@@ -18,13 +18,13 @@ jobs:
 
       - uses: actions/download-artifact@v3
         with:
-          name: lib
-          path: packages/viz/lib
+          name: dist
+          path: packages/lang-dot/dist
 
       - run: gh release create "${{ github.ref }}" --draft --title "${{ github.ref_name }}"
         env:
           GH_TOKEN: ${{ github.token }}
-        working-directory: packages/viz
+        working-directory: packages/lang-dot
 
   publish:
     needs: build
@@ -37,8 +37,8 @@ jobs:
 
       - uses: actions/download-artifact@v3
         with:
-          name: lib
-          path: packages/viz/lib
+          name: dist
+          path: packages/lang-dot/dist
 
       - uses: actions/setup-node@v3
         with:
@@ -50,4 +50,4 @@ jobs:
       - run: npm publish --provenance --access public
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
-        working-directory: packages/viz
+        working-directory: packages/lang-dot
