Add files field and README for lang-dot

--- a/packages/lang-dot/package.json
+++ b/packages/lang-dot/package.json
@@ -13,6 +13,10 @@
     "import": "./dist/index.js",
     "require": "./dist/index.cjs"
   },
+  "files": [
+    "dist/index.js",
+    "dist/index.cjs"
+  ],
   "main": "dist/index.cjs",
   "module": "dist/index.js",
   "devDependencies": {
