--- a/packages/examples/parcel/package.json
+++ b/packages/examples/parcel/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "dependencies": {
-    "@viz-js/viz": "3.1.0-dev",
+    "@viz-js/viz": "3.2.0",
     "parcel": "^2.9.3"
   },
   "browserslist": "> 0.5%, last 2 versions, not dead",
