--- a/packages/lang-dot/package.json
+++ b/packages/lang-dot/package.json
@@ -19,6 +19,7 @@
   ],
   "main": "dist/index.cjs",
   "module": "dist/index.js",
+  "types": "types/index.d.ts",
   "devDependencies": {
     "@lezer/generator": "^1.3.0",
     "@rollup/plugin-node-resolve": "^15.1.0",
