--- a/.github/workflows/viz-build.yml
+++ b/.github/workflows/viz-build.yml
@@ -106,6 +106,11 @@ jobs:
         with:
           node-version: "18.x"
 
+      - name: "Run yarn install in package directory"
+        run: |
+          yarn install --frozen-lockfile
+        working-directory: packages/viz
+
       - name: "Run check-types"
         run: |
           yarn install --frozen-lockfile
