Add a "types" condition to viz exports

--- a/.github/workflows/viz-build.yml
+++ b/.github/workflows/viz-build.yml
@@ -115,4 +115,5 @@ jobs:
         run: |
           yarn install --frozen-lockfile
           yarn check-types
+          yarn check-types-esnext
         working-directory: packages/viz/test/types
