--- a/packages/viz/package.json
+++ b/packages/viz/package.json
@@ -14,6 +14,7 @@
   "license": "MIT",
   "types": "types/index.d.ts",
   "exports": {
+    "types": "./types/index.d.ts",
     "import": "./lib/viz-standalone.mjs",
     "require": "./lib/viz-standalone.js"
   },
