Create GitHub release in publish workflow

--- a/.github/workflows/viz-publish.yml
+++ b/.github/workflows/viz-publish.yml
@@ -1,8 +1,6 @@
 name: Publish viz
 
-on:
-  push:
-    tags: ["viz-release-*"]
+on: workflow_dispatch
 
 jobs:
   build:
@@ -12,7 +10,7 @@ jobs:
     needs: build
     runs-on: ubuntu-latest
     permissions:
-      contents: read
+      contents: write
       id-token: write
     steps:
       - uses: actions/checkout@v3
@@ -24,12 +22,23 @@ jobs:
 
       - uses: actions/setup-node@v3
         with:
-          node-version: "18.x"
+          node-version: "20.x"
           registry-url: "https://registry.npmjs.org"
 
-      - run: npm install -g npm
+      - name: "Collect release info"
+        run: |
+          node scripts/collect-release-info.js packages/viz >> "$GITHUB_ENV"
 
-      - run: npm publish --provenance --access public
+      - name: "Create GitHub release"
         env:
-          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
-        working-directory: packages/viz
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: |
+          echo "$RELEASE_NOTES" > "${{ runner.temp }}/notes.md"
+          gh release create $RELEASE_TAG --notes-file "${{ runner.temp }}/notes.md" --title "$RELEASE_TITLE" --draft packages/viz/lib/viz-standalone.js
+
+      # - run: npm install -g npm
+      #
+      # - run: npm publish --provenance --access public
+      #   env:
+      #     NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
+      #   working-directory: packages/viz
