--- a/packages/lang-dot/package.json
+++ b/packages/lang-dot/package.json
@@ -11,7 +11,8 @@
   "type": "module",
   "exports": {
     "import": "./dist/index.js",
-    "require": "./dist/index.cjs"
+    "require": "./dist/index.cjs",
+    "types": "./types/index.d.ts"
   },
   "files": [
     "dist/index.js",
