--- a/packages/lang-dot/package.json
+++ b/packages/lang-dot/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@viz-js/lang-dot",
-  "version": "1.0.2-dev",
+  "version": "1.0.3",
   "description": "Graphviz DOT language support for the CodeMirror code editor",
   "repository": {
     "type": "git",
