--- a/.github/workflows/lang-dot-publish.yml
+++ b/.github/workflows/lang-dot-publish.yml
@@ -10,7 +10,7 @@ jobs:
     needs: build
     runs-on: ubuntu-latest
     permissions:
-      contents: read
+      contents: write
       id-token: write
     steps:
       - uses: actions/checkout@v4
