--- a/packages/viz/package.json
+++ b/packages/viz/package.json
@@ -5,7 +5,7 @@
     "graphviz",
     "emscripten"
   ],
-  "version": "3.2.4",
+  "version": "3.2.4-dev",
   "repository": {
     "type": "git",
     "url": "https://github.com/mdaines/viz-js.git",
