--- a/packages/lang-dot/package.json
+++ b/packages/lang-dot/package.json
@@ -4,7 +4,7 @@
   "description": "Graphviz DOT language support for the CodeMirror code editor",
   "repository": {
     "type": "git",
-    "url": "https://github.com/mdaines/viz-js.git",
+    "url": "git+https://github.com/mdaines/viz-js.git",
     "directory": "packages/lang-dot"
   },
   "license": "MIT",
