--- a/packages/viz/package.json
+++ b/packages/viz/package.json
@@ -8,7 +8,7 @@
   "version": "3.3.0-dev",
   "repository": {
     "type": "git",
-    "url": "https://github.com/mdaines/viz-js.git",
+    "url": "git+https://github.com/mdaines/viz-js.git",
     "directory": "packages/viz"
   },
   "license": "MIT",
