--- a/packages/viz/package.json
+++ b/packages/viz/package.json
@@ -5,7 +5,7 @@
     "graphviz",
     "emscripten"
   ],
-  "version": "3.3.1-dev",
+  "version": "3.4.0",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/mdaines/viz-js.git",
